# GLPAI

./: .clang-format  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
assets/models/: abo.blend  abo.fbx  abomination.fbx  o.ply
assets/models/train/: seat.fbx  seat.mtl  seat.ply  train_compartment.mtl  train_head.mtl
shaders/basic/: frag.glsl  vert.glsl
shaders/texture/: frag.glsl  vert.glsl
shaders/white/: frag.glsl  vert.glsl
src/: main.cpp
src/include/cm_math/: operations.cpp  operations.hpp
src/include/osDependent/linux/filesystem/: fileImport.hpp
src/include/physics/: collisions.cpp  collisions.hpp
src/include/physics/classes/: hitVolumes.cpp  hitVolumes.hpp  physicsEngine.cpp  physicsEngine.hpp
src/include/platform/: cm_time.hpp  fileIO.hpp
src/include/rendering/dataClasses/: mesh.cpp  mesh.hpp
src/include/rendering/opengl/: cm_opengl.cpp  cm_opengl.hpp
src/include/rendering/vulkan/: cm_vulkan.cpp  cm_vulkan.hpp
src/include/rendering/window/: window.cpp  window.hpp
src/include/types/: physics.hpp  primitives.hpp  vectors.cpp  vectors.hpp
src/include/types/classes/: camera.cpp  camera.hpp  cubemap.cpp  cubemap.hpp  gameObject.cpp  gameObject.hpp  image.cpp  image.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp  transform.cpp  transform.hpp
src/include/types/data_structures/: linked_list.hpp  tree.cpp  tree.hpp
src/include/utility/: printUtil.cpp  printUtil.hpp
src/rendering/opengl/include/: cm_opengl.hpp
src/rendering/vulkan/include/: cm_vulkan.hpp
(+22 files in other folders)
